[package]
name = "rusty-pager"
version = "0.1.1"
authors = ["Sean Bruton <sean@uberfoo.net>"]
description = "unoffical rust interface for the pagerduty api"
repository = "https://github.com/sbruton/rusty-pager"
license = "MIT"
keywords = ["pagerduty"]
categories = ["api-bindings", "web-programming"]

[dependencies]
serde = "1.0.59"
serde_derive = "1.0.59"
serde_json = "1.0.17"
chrono = "0.4.2"
reqwest = "0.8.5"
error-chain = "0.11.0"
uuid = { version = "0.6.3", features = ["v4"] }
