[package]
name = "rusty-pager"
version = "0.1.w"
authors = ["Sean Bruton <sean@uberfoo.net>, Ray Slakinski <ray@sdf1.net>"]
description = "unoffical rust interface for the pagerduty api"
repository = "https://github.com/sbruton/rusty-pager"
license = "MIT"
keywords = ["pagerduty"]
categories = ["api-bindings", "web-programming"]

[dependencies]
# mime = "0.3.13"
serde = "1.0.87"
serde_derive = "1.0.87"
serde_json = "1.0.38"
chrono = "0.4.6"
reqwest = "0.9.9"
error-chain = "0.12.0"
uuid = { version = "0.7.2", features = ["v4"] }
